// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[snapshot] AspectRatioFence AspectRatioFence 1`] = `
<div
  className="AspectRatioFence_wrap_2HH2L"
  style={
    Object {
      "--ratio": "(1.7777777777777777)",
    }
  }
>
  <img
    alt="AspectRatioFence"
    src="AspectRatioFence.png"
  />
</div>
`;

exports[`[snapshot] AspectRatioFence AspectRatioFence with custom elementType 1`] = `
<section
  className="AspectRatioFence_wrap_2HH2L"
  style={
    Object {
      "--ratio": "(1.3333333333333333)",
    }
  }
>
  <img
    alt="AspectRatioFence"
    src="AspectRatioFence.png"
  />
</section>
`;
